Pin unpkg versions of promise-polyfill / whatwg-fetch / abortcontroller-polyfill

--- a/plain-javascript-github-fetch/index.html
+++ b/plain-javascript-github-fetch/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<script src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
-<script src="https://unpkg.com/whatwg-fetch/fetch.js"></script>
-<script src="https://unpkg.com/abortcontroller-polyfill/dist/umd-polyfill.js"></script>
+<script src="https://unpkg.com/promise-polyfill@8.1.0/dist/polyfill.min.js"></script>
+<script src="https://unpkg.com/whatwg-fetch@3.0.0/dist/fetch.umd.js"></script>
+<script src="https://unpkg.com/abortcontroller-polyfill@1.2.5/dist/umd-polyfill.js"></script>
 
 <style>
 body {
@@ -25,7 +25,7 @@ times to see both cases.
 Note: this example is designed to run in old browsers like Microsoft Explorer 11:
 </p>
 <ul>
-  <li>it adds support for fetch via "unfetch"
+  <li>it adds support for fetch via "github-fetch"
   <li>it adds support for promises via "promise-polyfill"
   <li>it uses no ES6 arrow functions or template literals and so on
 </ul>
