--- a/plain-javascript-unfetch/index.html
+++ b/plain-javascript-unfetch/index.html
@@ -3,7 +3,7 @@
 <script src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
 <script src="https://unpkg.com/unfetch/dist/unfetch.umd.js"></script>
 <script>fetch = unfetch</script>
-<script src="https://unpkg.com/abortcontroller-polyfill/dist/umd-polyfill.js"></script>
+<script src="https://unpkg.com/abortcontroller-polyfill@1.2.9/dist/umd-polyfill.js"></script>
 
 <style>
 body {
