--- a/plain-javascript/index.html
+++ b/plain-javascript/index.html
@@ -1,4 +1,4 @@
-<script src="https://unpkg.com/abortcontroller-polyfill/dist/umd-polyfill.js"></script>
+<script src="https://unpkg.com/abortcontroller-polyfill@1.2.9/dist/umd-polyfill.js"></script>
 
 <style>
 body {
